The website of Soonyoung Kim

--- a/assets/css/photos.style.css
+++ b/assets/css/photos.style.css
@@ -89,3 +89,4 @@ body {
 .box:hover img {
   opacity: 0.4;
 }
+/* Resources: https://codepen.io/AleksandarCizmadija/pen/vabboM: CSS Grid album with nice hover effect/
